...
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/registerVoter"
        android:layout_width="347dp"
        android:layout_height="114dp"
        android:backgroundTint="#4772E4"
        android:onClick="IntentVoterRegistration"
        android:text="Register as a Voter"
        android:textColor="#FFFFFF"
...
